Change app icon and app name

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,7 +6,7 @@
     "description": "The application name"
   },
 
-  "bikeCustomerApp": "Bike Customer App",
+  "bikeCustomerApp": "Ezy Ride",
   "@bikeCustomerApp": {
     "description": "The bike customer application name"
   },
